crates/swc_ecma_parser/tests/test262-error-references/fail/28520880d460c4f9.js.stderr
error: assignment property is invalid syntax
 --> $DIR/tests/test262-parser/fail/28520880d460c4f9.js:1:13
  |
1 | ({a: b = 0, c = 0});
  |             ^^^^^

